--- a/package.json
+++ b/package.json
@@ -24,13 +24,20 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@react-pdf/renderer": "^4.3.0",
+    "@uiw/react-md-editor": "^4.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "inngest": "^3.40.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "marked": "^16.3.0",
+    "next": "^15.5.3",
     "next-themes": "^0.4.6",
+    "puppeteer": "^24.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
